tests/ui/break_outside_loop.ina
// COMPILE_FAIL

fn main() {
    let a = break;
    if true {
        break
    }
    match true {
        _ => break,
    }
    { break }
    // OK
    loop { break; }
}
